# tfscreen

./: .readthedocs.yaml  CLAUDE.md  README.rst  pyproject.toml  run_all_tests.sh  wipe.sh
.github/workflows/: tests.yml
docs/: Makefile  make.bat  requirements.txt
docs/manuscript/: methods.md
docs/source/: analysis.rst  conf.py  grid.rst  index.rst  ligandmpnn-features.rst  model-inputs.rst  process-raw.rst  quickstart.rst  run_config.yaml  simulation.rst  summarize-fit.rst
examples/: grid.yaml  run.sh  simulate_grid.yaml
examples/growth_model/: grid.yaml  run.srun
examples/process_raw/: library_config.yaml
examples/simulate/: .simulate_config.yaml.swp  simulate_config.yaml  simulate_grid.yaml
examples/simulate-and-analyze/: README.md  hill_params.csv  run.sh  simulate_config.yaml
examples/simulate-empirical/: simulate_config.yaml
examples/tfmodel/: grid.yaml  run.srun
examples/toy_thermo/: toy_thermo.ipynb
notebooks/: build-od600-to-cfu-mapper.ipynb  calibrate-growth.ipynb  categorize-responses.ipynb  counts-to-theta-fit.ipynb  extract-epistasis.ipynb  run_config.yaml
notebooks/analysis-examples/: 00_basic-manipulations.ipynb  01_basic-epistasis.ipynb  02_basic-categorizer-fitter.ipynb  03_basic-make-a-heatmap-for-full-talk-single-site1.ipynb  03_basic-make-a-heatmap.ipynb  advanced-epistasis-then-categorizer.ipynb  advanced-manual-heatmap.ipynb
notebooks/create-test-data/: 2025-12-13_calibration.json  create-test-dataset.ipynb  run_config.yaml
notebooks/dev/: counts-to-theta-fit.ipynb  multi-transform-mix.ipynb
notebooks/development-tools/: binding.csv  check-for-int-in-svi.ipynb  distributions.ipynb  run-nuts.ipynb  run-nuts_single.ipynb  run-svi.ipynb
notebooks/input/: raw-compiled-experiments.xlsx
notebooks/monoculture-calibration/: 2025-10-02_calibration.json  2025-10-02_control-experiments.xlsx  calibrate-growth.ipynb
notebooks/od600-to-cfu/: 2025-09-17_od600-serial-dilution-of-keio-cells-with-10x-technical-replicate.xlsx  2025-09-19_od600-vs-cfu-per-mL-by-plate-counting.xlsx  build-od600-to-cfu-mapper.ipynb  calibrate-od600-to-cfu.ipynb  cfu-od600-calibration.xlsx  od600_to_cfu.yaml
notebooks/tfscreen-walkthrough/: 2025-10-02_calibration.json  ddG_ensemble_clean_with_effector.csv  demonstration.yaml  run_config.yaml  tfscreen-walkthrough.ipynb
notebooks/tune-ensemble-parameters/: seqs.txt
notebooks/tune-ensemble-parameters/2025-08-17_calibrate-dG0-from-expt/: dG0-for-ensemble.xlsx  dG0-for-ensemble_working-on-it.xlsx  from-mwc-concs.csv
reports/: flake.txt
reports/junit/: junit.xml
scripts/: create_grid.py  example_grid.yaml  generate_ligandmpnn_features.py  generate_struct_ensemble.py  run_template.srun  summarize_grid.py
src/tfscreen/: __init__.py  __version__.py
src/tfscreen/analysis/: __init__.py  _get_indiv_growth.py  cfu_to_growth.py  cfu_to_theta.py  compare_feature.py  compare_runs.py  compare_theta.py  counts_to_growth.py  counts_to_lncfu.py  counts_to_theta.py  extract_epistasis.py  get_indiv_growth.py  get_time0.py  growth_to_theta.py  model_pre_growth.py  process_theta_fit.py  theta_to_hill.py
src/tfscreen/analyze/: __init__.py  estimate_growth_rates.py  estimate_hill.py  estimate_theta.py  estimate_theta_dev.py  estimate_time0.py
src/tfscreen/calibration/: __init__.py  _models.py  build_calibration_dict.py  build_design_matrix.py  calibrate.py  get_background.py  get_k_vs_theta.py  get_slopes.py  get_wt_growth.py  get_wt_k.py  get_wt_theta.py  io.py  manual_fit.py  plot.py
src/tfscreen/fitting/: __init__.py  eb.py  fit_manager.py  linear_regression.py  matrix_nls.py  param_scaling.py  parse_patsy.py  predict_with_error.py  run_least_squares.py  run_map.py  stats_test_suite.py  weighted_linear_regression.py
src/tfscreen/genetics/: __init__.py  build_cycles.py  build_mut_geno_matrix.py  combine_mutation_effects.py  count_mutation_backgrounds.py  data.py  expand_genotype_columns.py  genotype_sorting.py  get_single_with_wt.py  library_manager.py
src/tfscreen/growth_model/: batch.py  checkpoint_io.py  configuration_io.py  data_class.py  extraction.py  model.py  model_class.py  prediction.py  registry.py
src/tfscreen/mle/: __init__.py  fit_manager.py  predict_with_error.py
src/tfscreen/models/: __init__.py  growth_linkage.py  occupancy_growth_model.py  transition_linkage.py
src/tfscreen/plot/: __init__.py  cat_fits.py  corner.py  default_styles.py  err_vs_mag.py  err_zscore.py  est_v_real_summary.py  geno_trajectory.py  helper.py  hill_fit.py  plot_theta_fits.py  uncertainty_calibration.py  xy_corr.py
src/tfscreen/process_raw/: __init__.py  _counts_io.py  assemble.py  counts_to_lncfu.py  fastq_to_calls.py  fastq_to_counts.py  fastq_to_reads.py  mut_quality_control.py  od600_to_cfu.py  process_counts.py  process_fastq.py  reads_to_muts.py
src/tfscreen/simulate/: __init__.py  base_growth_data.py  binding_data.py  binding_params.py  build_sample_dataframes.py  generate_libraries.py  generate_phenotypes.py  growth_parameters_output.py  initialize_population.py  library_binding_data.py  library_prediction.py  load_simulation_config.py  presplit_data.py  run_simulation.py  sample_activity.py  sample_theta.py  selection_experiment.py  setup_observable.py  sim_data_class.py  thermo_to_growth.py  transformation_lam_output.py
src/tfscreen/tfmodel/: __init__.py  checkpoint_io.py  configuration_io.py  data_class.py  extraction.py  model_class.py  model_orchestrator.py  prediction.py  run_inference.py
src/tfscreen/util/: __init__.py  add_group_columns.py  argsort_genotypes.py  (+18 more)
tests/: conftest.py
tests/fixtures/: binding_gold-standared.csv  generate_nuts_reference.py  generate_reference_posteriors.py  growth.csv  numpyro_reference_posteriors.npz  nuts_gold_standard_reference.json
tests/integration/: test_epistasis_modes.py
tests/scripts/: test_generate_struct_ensemble.py
tests/smoke-tests/: conftest.py  test_configure_run_smoke.py  test_model_smoke.py  test_nuts_equivalence.py  test_posteriors_smoke.py  test_prediction_smoke.py  test_prefit_calibration_smoke.py  test_run_growth_analysis_smoke.py
(+1158 files in other folders)
