[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools.dynamic]
version = { attr = "tfscreen.__version__.__version__" }

[tool.setuptools.package-data]
"*" = []

[project]
name = "tfscreen"
dynamic = ["version"]
dependencies = [
  "numpy",
  "pandas",
  "openpyxl",
  "matplotlib",
  "tqdm",
  "statsmodels",
  "PyYAML",
  "corner",
  "numba",
"pybktree",
  "pyfastx",
  "optax",
  "numpyro>=0.19.0",
  "dill",
  "flax",
  "jax",
  "jaxlib",
  "h5py",
  "scipy",
  "jinja2",
]

requires-python = ">=3.10"
authors = [{ name = "Mike Harms", email = "harms@uoregon.edu" }]
maintainers = [{ name = "Mike Harms", email = "harms@uoregon.edu" }]
description = "Simulate or analyze a high-throughput screen of a transcription factor library"
readme = "README.rst"
license = { file = "LICENSE" }
keywords = [
  "high-throughput",
  "protein",
  "transcription factor",
  "analysis",
  "statistics",
  "simulation",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
]

[project.urls]
Repository = "https://github.com/harmslab/tfscreen.git"
"Bug Tracker" = "https://github.com/harmslab/tfscreen/issues"

[project.optional-dependencies]
test = ["coverage", "flake8", "pytest", "genbadge", "pytest-mock"]
docs = ["pydata-sphinx-theme"]

[project.scripts]
tfs-process-fastq = "tfscreen.process_raw.process_fastq:main"
tfs-process-counts = "tfscreen.process_raw.process_counts:main"
tfs-configure-model = "tfscreen.analysis.hierarchical.growth_model.scripts.configure_model_cli:main"
tfs-prefit-calibration = "tfscreen.analysis.hierarchical.growth_model.scripts.run_prefit_calibration_cli:main"
tfs-fit-model = "tfscreen.analysis.hierarchical.growth_model.scripts.fit_model_cli:main"
tfs-sample-posterior = "tfscreen.analysis.hierarchical.growth_model.scripts.sample_posterior_cli:main"
tfs-extract-params = "tfscreen.analysis.hierarchical.growth_model.scripts.extract_params_cli:main"
tfs-predict-growth = "tfscreen.analysis.hierarchical.growth_model.scripts.predict_growth_cli:main"
tfs-predict-theta = "tfscreen.analysis.hierarchical.growth_model.scripts.predict_theta_cli:main"
tfs-cat-response = "tfscreen.analysis.cat_response.cat_response_cli:main"
tfs-diagnose-nan = "tfscreen.analysis.hierarchical.growth_model.scripts.diagnose_nan_cli:main"
tfs-simulate = "tfscreen.simulate.scripts.run_simulation_cli:main"
tfs-setup-grid = "tfscreen.analysis.hierarchical.growth_model.scripts.setup_grid_cli:main"
tfs-summarize-grid = "tfscreen.analysis.hierarchical.growth_model.scripts.summarize_grid_cli:main"
tfs-subset-genotypes = "tfscreen.analysis.hierarchical.growth_model.scripts.subset_genotypes_cli:main"
tfs-summarize-fit = "tfscreen.analysis.hierarchical.growth_model.scripts.summarize_fit_cli:main"
