[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools.dynamic]
version = { attr = "tfscreen.__version__.__version__" }

[tool.setuptools.package-data]
"*" = []

[project]
name = "tfscreen"
dynamic = ["version"]
dependencies = [
  "numpy",
  "pandas",
  "openpyxl",
  "matplotlib",
  "tqdm",
  "statsmodels",
  "PyYAML",
  "corner",
  "numba",
"pybktree",
  "pyfastx",
  "optax",
  "numpyro>=0.19.0",
  "dill",
  "flax",
  "jax",
  "jaxlib",
  "h5py",
  "scipy",
  "jinja2",
]

requires-python = ">=3.11"
authors = [{ name = "Mike Harms", email = "harms@uoregon.edu" }]
maintainers = [{ name = "Mike Harms", email = "harms@uoregon.edu" }]
description = "Simulate or analyze a high-throughput screen of a transcription factor library"
readme = "README.rst"
license = { file = "LICENSE" }
keywords = [
  "high-throughput",
  "protein",
  "transcription factor",
  "analysis",
  "statistics",
  "simulation",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
]

[project.urls]
Repository = "https://github.com/harmslab/tfscreen.git"
"Bug Tracker" = "https://github.com/harmslab/tfscreen/issues"

[tool.pytest.ini_options]
markers = [
    "slow: mark test as slow to run",
]

[project.optional-dependencies]
test = ["coverage", "flake8", "pytest", "genbadge", "pytest-mock"]
docs = ["pydata-sphinx-theme"]

[project.scripts]
tfs-process-fastq = "tfscreen.process_raw.scripts.process_fastq_cli:main"
tfs-process-counts = "tfscreen.process_raw.scripts.process_counts_cli:main"
tfs-process-presplit = "tfscreen.process_raw.scripts.process_presplit_cli:main"
tfs-configure-model = "tfscreen.tfmodel.scripts.configure_model_cli:main"
tfs-prefit-calibration = "tfscreen.tfmodel.scripts.prefit_calibration_cli:main"
tfs-fit-model = "tfscreen.tfmodel.scripts.fit_model_cli:main"
tfs-fit-genotypes = "tfscreen.tfmodel.scripts.fit_genotypes_cli:main"
tfs-sample-posterior = "tfscreen.tfmodel.scripts.sample_posterior_cli:main"
tfs-sample-prior = "tfscreen.tfmodel.scripts.sample_prior_cli:main"
tfs-extract-params = "tfscreen.tfmodel.scripts.extract_params_cli:main"
tfs-predict-growth = "tfscreen.tfmodel.scripts.predict_growth_cli:main"
tfs-predict-theta = "tfscreen.tfmodel.scripts.predict_theta_cli:main"
tfs-cat-response = "tfscreen.analysis.cat_response.scripts.cat_response_cli:main"
tfs-extract-epistasis = "tfscreen.analysis.scripts.extract_epistasis_cli:main"
tfs-diagnose-nan = "tfscreen.tfmodel.scripts.diagnose_nan_cli:main"
tfs-simulate = "tfscreen.simulate.scripts.simulate_cli:main"
tfs-report-cfu0 = "tfscreen.simulate.scripts.report_cfu0_cli:main"
tfs-build-empirical = "tfscreen.simulate.scripts.build_empirical_cli:main"
tfs-setup-sim-grid = "tfscreen.simulate.scripts.setup_sim_grid_cli:main"
tfs-setup-grid = "tfscreen.tfmodel.scripts.setup_grid_cli:main"
tfs-summarize-grid = "tfscreen.tfmodel.scripts.summarize_grid_cli:main"
tfs-subset-genotypes = "tfscreen.tfmodel.scripts.subset_genotypes_cli:main"
tfs-summarize-fit = "tfscreen.tfmodel.scripts.summarize_fit_cli:main"
tfs-summarize-sbc = "tfscreen.tfmodel.scripts.summarize_sbc_cli:main"
